# routes/generalRoute.js
@@ -27,6 +27,12 @@ router.get('/settings', [auth], generalController.getSettings);
 
 router.post('/prayer/status', [auth], generalController.usersPrayers);
 
+router.post('/admin/dailyAyat/create', [auth, admin], generalController.dailyAyatCreate);
+router.put('/admin/dailyAyat/update', [auth, admin], generalController.updateDailyAyat);
+router.delete('/admin/dailyAyat/:id', [auth, admin], generalController.deleteDailyAyat);
+router.get('/admin/dailyAyat/:id/:search?', [auth, admin], generalController.getAllDailyAyatAdmin);
+router.get('/dailyAyat/all/:id?', [auth], generalController.getDuaApp);
+
 
 
 
